# backend

./: Dockerfile  README.md  requirements.txt  test.db
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  refactor.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
app/: README.md  constants.py  database.py  init_db.py  main.py  pyproject.toml  requirements.txt
app/models/: traffic.py
app/my_traffic_visualizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
app/routers/: events.py  traffic.py
app/scheduler/: task_scheduler.py
app/schemas/: __init__.py  traffic_schemas.py
app/services/: cache_service.py  event_service.py  traffic_service.py
schemas/: traffic_schemas.py
